# skmgr

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  skm.cmd  skm.sh
src/: __init__.py  cli.py  config.py  github.py  linker.py  project.py  registry.py
